samples/_failures_safe/1761392771_422463_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d50dbc3b.c: In function ‘main’:
./samples/SAFE/__tmp_d50dbc3b.c:142:9: error: expected declaration or statement at end of input
  142 |         destroy_matrix(&result);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_d50dbc3b.c:142:9: error: expected declaration or statement at end of input
